package Padrao.hamburgueria;

public class EmPreparo implements EstadoPedido {
    public String getEstado() { return "Em preparo"; }
}
