package Padrao.hamburgueria;

public class Entregue implements EstadoPedido {
    public String getEstado() { return "Entregue"; }
}