package Padrao.hamburgueria;

public interface Frete {
    double calcular(double valor);
}
