package Padrao.hamburgueria;

public class FreteGratis implements Frete {
    public double calcular(double valor) {
        return 0;
    }
}