package Padrao.hamburgueria;

public abstract class LancheFactory {

    public abstract Lanche criarLanche();

}
