package Padrao.hamburgueria;

public class NoForno implements ModoCozimento {
    public String cozinhar() {
        return "Preparado no forno";
    }
}